Fix the alignment issues

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -589,7 +589,7 @@ body .top-right-big-circle {
 
 #how-to {
   margin: 4rem 0 5rem;
-  max-width: 1000px;
+  max-width: 840px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -872,7 +872,7 @@ body .top-right-big-circle {
 }
 
 #results p {
-  max-width: 682px;
+  max-width: 780px;
   color: #021729;
   font-weight: 500;
   opacity: 0.7;
@@ -895,7 +895,9 @@ body .top-right-big-circle {
 }
 
 #results .cards-container .card {
-  margin: 1rem 2rem;
+  /* margin: 1rem 2rem; */
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   padding: 2rem 3rem;
   background-color: #000;
   border-radius: 10px;
@@ -945,12 +947,13 @@ body .top-right-big-circle {
 
 #why-us .cards-container {
   text-align: center;
+  max-width: 940px;
 }
 
 #why-us .blue-frame {
   margin-top: 4rem;
   background-color: #090c22;
-  max-width: 750px;
+  max-width: 830px;
   padding: 1rem 2rem;
   border-radius: 10px;
 }
